@@ -281,6 +281,7 @@ aspect FrontendMain {
       options.addKeyOption("-O");
       options.addKeyOption("-J-Xmx128M");
       options.addKeyOption("-recover");
+      options.addKeyOption("-Xprint");
 
       // non-javac options
       options.addKeyOption("-profile"); // output profiling information
