@@ -2,6 +2,8 @@
 
     * Fixed pretty printing problem for annotation declarations
     (the `@` in `@interface` was omitted)
+    * Added the -Xprint command-line flag which causes pretty printing of the
+    source files
 
 2014-04-15  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
